`clojure`: emit `-J` flags when using `-M`
Fixes https://github.com/clojure-emacs/enrich-classpath/issues/56